# solana-email-box

./: .gitignore  Anchor.toml  package-lock.json
programs/solana-email-box/: Cargo.toml
programs/solana-email-box/src/: lib.rs
programs/solana-email-box/tests/: integration.rs
tests/: solana-email-box.ts
