[package]
name = "solana-email-box"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_email_box"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dev-dependencies]
solana-program-test = "1.15.2"
solana-sdk = "1.15.2"
rand = "0.8.5"

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
solana-program = "1.15.2"
